--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".View.FavouritePlaces" />
+        <activity android:name=".View.FavouritePlaces"
+            android:label="@string/title_activity_fav_places"
+            android:parentActivityName=".View.MainActivity"
+            />
         <activity
             android:name=".View.DayPlan"
             android:label="@string/title_activity_day_plan"
