view detailed information about a place
TODO
images next to list results - may not do this in listview results
camera zoom
bounds check, therew error with current implementation.
user selection and input
user preferences
postcard
clustering
add selected site to favourites
flag sites as visited
user should be able to record personal notes about the site and photos once visited
allow the user to generate an itinerary based on sites from favs list, identifying which site to visit and in which order.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,5 +32,6 @@ dependencies {
     compile 'com.google.code.gson:gson:2.2.4'
     compile 'com.google.android.gms:play-services-places:10.2.0'
     compile 'com.google.android.gms:play-services-location:10.2.0'
+    compile 'com.google.maps.android:android-maps-utils:0.5+'
     testCompile 'junit:junit:4.12'
 }
