--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,9 +21,9 @@
         android:theme="@style/MyTheme">
         <activity
             android:name=".View.MainActivity"
+            android:configChanges="orientation|screenSize"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar"
-            android:configChanges="orientation|screenSize">
+            android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -32,15 +32,15 @@
         </activity>
         <activity
             android:name=".View.FavouritePlaces"
+            android:configChanges="orientation|screenSize"
             android:label="@string/title_activity_fav_places"
-            android:parentActivityName=".View.MainActivity"
-            android:configChanges="orientation|screenSize"/>
+            android:parentActivityName=".View.MainActivity" />
         <activity
             android:name=".View.DayPlan"
+            android:configChanges="orientation|screenSize"
             android:label="@string/title_activity_day_plan"
             android:parentActivityName=".View.MainActivity"
-            android:theme="@style/AppTheme.NoActionBar"
-            android:configChanges="orientation|screenSize">
+            android:theme="@style/AppTheme.NoActionBar">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="assasingh.nearmev2.View.MainActivity" />
@@ -48,14 +48,14 @@
         <activity android:name=".View.NearMe">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="assasingh.nearmev2.View.MainActivity"
-                android:configChanges="orientation|screenSize"/>
+                android:configChanges="orientation|screenSize"
+                android:value="assasingh.nearmev2.View.MainActivity" />
         </activity>
         <activity
             android:name=".View.PostCard"
+            android:configChanges="orientation|screenSize"
             android:label="@string/title_activity_postcard"
-            android:screenOrientation="landscape"
-            android:configChanges="orientation|screenSize"/>
+            android:screenOrientation="landscape" />
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
@@ -64,16 +64,25 @@
         <service
             android:name=".Services.LocationService"
             android:enabled="true"
-            android:exported="true"></service>
+            android:exported="true" />
 
-        <activity android:name=".View.SettingsActivity"
-            android:theme="@style/AppTheme.NoActionBar"
+        <activity
+            android:name=".View.SettingsActivity"
+            android:configChanges="orientation|screenSize"
             android:label="@string/title_activity_settings"
-            android:configChanges="orientation|screenSize">
-
+            android:theme="@style/AppTheme.NoActionBar">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="assasingh.nearmev2.View.MainActivity" />
+        </activity>
+        <activity
+            android:name=".View.NearMeCard"
+            android:label="@string/title_activity_near_me_card">
+
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="assasingh.nearmev2.View.NearMe" />
+
         </activity>
     </application>
 
