--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,8 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
 
     <permission
@@ -46,10 +48,12 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="assasingh.nearmev2.View.MainActivity" />
         </activity>
-        <activity android:name=".View.NearMe">
+        <activity
+            android:configChanges="orientation|screenSize"
+            android:name=".View.NearMe">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:configChanges="orientation|screenSize"
+
                 android:value="assasingh.nearmev2.View.MainActivity" />
         </activity>
         <activity
