images next to list results , slight bug where if you scroll the images go away. map view of day plan and routing from pin to pin. allow the user to generate an itinerary based on sites from favs list,
TODO

Day Plan
  ability to reorder dayPlan,

flag sites as visited
user should be able to record personal notes about the site and photos once visited
 identifying which site to visit and in which order.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -84,7 +84,8 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="assasingh.nearmev2.View.NearMe" />
         </activity>
-        <activity android:name=".View.Test"></activity>
+        <activity android:name=".View.Test" />
+        <activity android:name=".View.DayPlanMap"></activity>
     </application>
 
 </manifest>
